fix overflow logo

--- a/wp-content/themes/dubeaujeu/assets/css/h-main.css
+++ b/wp-content/themes/dubeaujeu/assets/css/h-main.css
@@ -24,7 +24,8 @@
 
 .header {
     text-align: center;
-    margin: 20px auto;
+    padding: 25px 0 15px;
+    margin: 0 auto;
     font-family: 'LeagueScriptNumberOne', serif;
 }
 
